Now works to build a java fx project with it